--- a/pom.xml
+++ b/pom.xml
@@ -53,11 +53,27 @@
        <version>2.0.6</version>
        <type>jar</type>
 	</dependency>
-	<dependency>
-    	<groupId>org.javatuples</groupId>
-    	<artifactId>javatuples</artifactId>
-    	<version>1.2</version>
-	</dependency>
+<dependency>
+    <groupId>com.sun.xml.bind</groupId>
+    <artifactId>jaxb-core</artifactId>
+    <version>2.3.0.1</version>
+</dependency>
+<dependency>
+    <groupId>javax.xml.bind</groupId>
+    <artifactId>jaxb-api</artifactId>
+    <version>2.3.1</version>
+</dependency>
+<dependency>
+    <groupId>com.sun.xml.bind</groupId>
+    <artifactId>jaxb-impl</artifactId>
+    <version>2.3.1</version>
+</dependency>
+<dependency>
+    <groupId>org.javassist</groupId>
+    <artifactId>javassist</artifactId>
+    <version>3.25.0-GA</version>
+</dependency>
+
   </dependencies>
   <repositories>
   	<repository>
